v0.3.1: use batch mode to send events and added disableStackTraces option